--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -12,3 +12,13 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.page-thumb {
+    padding: 8px;
+    margin: 8px;
+    background-color: cornflowerblue;
+    text-align: center;
+    display: inline-block;
+    overflow: hidden;
+    vertical-align: middle;
+}
