Introducing demonstration of the /Process endpoint. Bugfixes and code cleanup.

--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -18,7 +18,14 @@ code {
     margin: 8px;
     background-color: cornflowerblue;
     text-align: center;
+    position: relative;
     display: inline-block;
     overflow: hidden;
-    vertical-align: middle;
 }
+
+    .page-thumb img {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
