--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,6 +1,10 @@
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: #911208;
+}
+
+a:hover {
+    color: #f7786e;
 }
 
 code {
